--- a/Scripts/templates/home.html
+++ b/Scripts/templates/home.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salary Prediction</title>
+    <style>
+        body {
+          font-family: 'Arial', sans-serif;
+          margin: 20px;
+          align-items: center;
+          justify-content: center;
+          height: 100vh; 
+          margin-top: 150px;
+        }
+  
+        h2 {
+          color: #654E92;
+        }
+  
+        form {
+          max-width: 400px;
+          margin: 0 auto;
+          background-color: #fff;
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+  
+        label {
+          display: block;
+          margin-bottom: 8px;
+          color: #555;
+        }
+  
+        input,
+        select {
+          width: 100%;
+          padding: 8px;
+          margin-bottom: 12px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          box-sizing: border-box;
+        }
+  
+        select {
+          appearance: none;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          background-image: url('data:image/svg+xml;utf8,<svg fill="#555" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z" /></svg>');
+          background-repeat: no-repeat;
+          background-position-x: 100%;
+          background-position-y: 10px;
+          background-size: 24px;
+        }
+  
+        input[type="submit"] {
+          background-color: #40598F;
+          color: #fff;
+          padding: 10px 15px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+  
+        input[type="submit"]:hover {
+          background-color: #384E7E;
+        }
+      </style>
 </head>
 <body>
-    <h1>Input</h1>
+    <h1>Prediction</h1>
     <form action="/predict" method="post">
         <label for="age">Age:</label>
         <input type="text" id="age" name="age" required=""><br>
@@ -79,7 +142,6 @@
           <option value="17">Hungary</option>
           <option value="14">Holand-Netherlands</option>
         </select><br>
-
         <br /><br />
         <input type="submit" value="Predict"/>
     </form>
