--- a/Scripts/templates/result.html
+++ b/Scripts/templates/result.html
@@ -5,6 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Result</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        h2 {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        p {
+            font-family: 'Roboto', sans-serif;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .predict-title {
+            color: block;
+        }
+
+        .prediction-container {
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            text-align: center;
+            max-width: 500px;
+            margin: 0 auto;
+        }
+
+        .runtime-info {
+            margin-top: 20px;
+            font-size: 0.8em;
+            color: block;
+        }
+
+        .hasil-prediksi-title {
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            margin-top: -200px;
+        }
+
+    </style>
 </head>
 <body>
     <h2>Prediction Result</h2>
